fix: remove major styling bugs relating to text/component overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,8 +23,10 @@ $cell-height: 80px;
 
 .table-wrapper {
   overflow: scroll;
-  max-height: calc($table-height + 40px); // .user-table max-height + margin
-  max-width: 95vw;
+  min-height: calc($table-height + 50px);
+  min-width: calc($table-width + 50px);
+  max-height: calc($table-height + 50px); // .user-table max-height + margin
+  max-width: calc($table-width + 50px);
 }
 
 .user-table {
@@ -39,6 +41,7 @@ $cell-height: 80px;
   min-width: $table-width;
   min-height: $table-height;
   table-layout: fixed;
+  max-width: $table-width;
   max-height: $table-height;
 
   .table-row {
@@ -48,16 +51,25 @@ $cell-height: 80px;
 
   // fix column width according to data space needs
   .name-col {
-    width: 25%;
+    max-width: calc(0.25 * $table-width);
+    min-width: calc(0.25 * $table-width);
+    // width: 25%;
   }
   .username-col {
-    width: 20%;
+    max-width: calc(0.2 * $table-width);
+    min-width: calc(0.2 * $table-width);
+    // width: 20%;
   }
   .email-col {
-    width: 30%;
+    max-width: calc(0.3 * $table-width);
+    min-width: calc(0.3 * $table-width);
+    // width: 30%;
   }
+
   .phone-col {
-    width: 25%;
+    max-width: calc(0.25 * $table-width);
+    min-width: calc(0.25 * $table-width);
+    // width: 25%;
   }
 
   // style table header
@@ -82,6 +94,7 @@ $cell-height: 80px;
       text-align: center;
       overflow: hidden;
       text-overflow: ellipsis;
+      overflow-wrap: anywhere;
       height: $cell-height; // height parameter in tables, works as max-height
 
       &:first-child {
